<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".loginActivity">


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminate="true"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo_beta"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="40dp"
        android:hint="Logo"
        tools:layout_editor_absoluteX="76dp"
        tools:layout_editor_absoluteY="39dp" />

    <EditText
        android:id="@+id/txtUsr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_margin="25dp"
        android:hint="Correo"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/txtPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_margin="25dp"
        android:hint="Password"
        android:inputType="textPassword" />

    <Button
        android:onClick="login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startSession"
        android:layout_marginLeft="122dp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="143dp"
        tools:layout_editor_absoluteY="581dp" />

    <Button
        android:onClick="register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regsiter"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="145dp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="147dp"
        tools:layout_editor_absoluteY="470dp" />
    <Button
        android:onClick="register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/google"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="105dp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="147dp"
        tools:layout_editor_absoluteY="470dp" />

    <TextView
        android:onClick="forgotPass"
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="125dp"
        android:text="@string/forgotPass" />

</LinearLayout>